--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <p class="centert">
                     Welcome to Hinotes Music!
                 </p>
+                
+                <p>Fuck Off Mate</p>
             </div>
         </center>
   
